# task-management-backend

./: .env-sample  .gitignore  README.md  Task-Management.postman_collection.json  docker-compose.yml  pyproject.toml
conifg/: asgi.py  settings.py  urls.py  wsgi.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_assigned_user.py  0002_initial.py  0003_delete_task.py  0003_task_priority.py
users/: backends.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_table.py
